force-app/main/default/objects/Outbound_Contact_Pronouns__e.object
<CustomObject>
    <description>An outbound event sent to MiX that is designed to publish Contact pronouns change</description>
    <fields>
        <fullName>Action_Type__c</fullName>
        <description>A field the subscribers of this Event can use to identify which operation triggered the Event.</description>
        <label>Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_Id__c</fullName>
        <label>Person Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pronouns__c</fullName>
        <label>Pronouns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Staff_Id__c</fullName>
        <label>SAP Staff Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outbound Contact Pronouns</label>
    <pluralLabel>Outbound Contact Pronouns</pluralLabel>
</CustomObject>